--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,5 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-rocket = "0.5.0-rc.1"
-tokio  = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
+rocket     = "0.5.0-rc.1"
+serde      = { version = "1.0.132", features = ["derive"] }
+serde_json = "1.0.73"
+tokio      = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
