--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,29 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "build-prod": "webpack --mode production",
+    "build-dev": "webpack --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
+    "@mui/material": "5.2.6",
+    "@mui/styles": "5.2.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-router": "6.2.1",
+    "react-router-dom": "6.2.1"
+  },
+  "devDependencies": {
+    "@types/react-dom": "17.0.11",
+    "fork-ts-checker-webpack-plugin": "6.5.0",
+    "ts-loader": "9.2.6",
+    "ts-node": "10.4.0",
+    "typescript": "4.5.4",
+    "webpack": "5.65.0",
+    "webpack-cli": "4.9.1"
+  }
 }
