--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+rand       = "0.8.4"
 rocket     = "0.5.0-rc.1"
 serde      = { version = "1.0.132", features = ["derive"] }
 serde_json = "1.0.73"
