--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,3 +9,4 @@ rocket     = "0.5.0-rc.1"
 serde      = { version = "1.0.132", features = ["derive"] }
 serde_json = "1.0.73"
 tokio      = { version = "1.15.0", features = ["rt-multi-thread", "macros"] }
+uuid       = { version = "0.8.2", features = ["serde", "v4"] }
