--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "11.6.0",
     "@mui/material": "5.2.6",
     "@mui/styles": "5.2.3",
+    "axios": "0.24.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router": "6.2.1",
