--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build-prod": "webpack --mode production",
     "build-dev": "webpack --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "check-typescript-types": "tsc --noEmit --skipLibCheck"
   },
   "author": "",
   "license": "ISC",
