--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "build-prod": "webpack --mode production",
     "build-dev": "webpack --mode development",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "check-typescript-types": "tsc --noEmit --skipLibCheck"
+    "test": "jest",
+    "check-typescript-types": "tsc --noEmit --skipLibCheck",
+    "lint": "tslint 'src/**/*.ts' 'src/**/*.tsx'"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@mui/material": "5.3.1",
     "@mui/styles": "5.3.0",
     "axios": "0.25.0",
+    "jest": "27.4.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-router": "6.2.1",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@types/react-dom": "17.0.11",
     "fork-ts-checker-webpack-plugin": "6.5.0",
+    "ts-lint": "4.5.1",
     "ts-loader": "9.2.6",
     "ts-node": "10.4.0",
     "typescript": "4.5.5",
